manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musick-cit270
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musick-cit270
  template:
    metadata:
      labels:
        app: musick-cit270
    spec:
      containers:
        - name: musick-cit270
          image: alexmusick/cit270
          command: ["npm"]
          args: ["run","start"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: ".125"
              memory: "500Mi"
            requests:
              cpu: ".1"
              memory: "250Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: musick-cit270-loadbalancer
spec:
  selector:
    app: musick-cit270
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alexmusick-cit270-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  tls:
  - hosts:
    - musick-nodejs.cit270.com
    secretName: alexmusick-cit270-dev-tls
  rules:
  - host: musick-nodejs.cit270.com
    http:
      paths:
      - backend:
        serviceName: musick-cit270-loadbalancer
        servicePort: 80
